--- a/mundi/src/main/resources/templates/home.html
+++ b/mundi/src/main/resources/templates/home.html
@@ -10,19 +10,27 @@
     <div class="container">
         <div class="card" th:each="pedido : ${pedidos}">
             <div class="card-header" th:text="${pedido.nomeProduto}">Nome do produto</div>
-            <div>Valor: <span th:text="${pedido.valorProduto}">399,99</span></div>
-            <div>Data da entrega: <span th:text="${pedido.dataEntrega}">20/09/2020</span></div>
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-12 col-sm-8 mb-3">
+                        <div class="row">
+                            <div class="col-md-5">Valor: <span th:text="${pedido.valorProduto}">399,99</span></div>
+                            <div class="col-md-7">Data da entrega: <span th:text="${pedido.dataEntrega}">20/09/2020</span></div>
+                        </div>
+                        <div>Produto</div>
+                        <div><input  class="form-control" th:value="${pedido.urlProduto}" value="Url do produto"></div>
 
-            <div>Produto</div>
-            <div><input  class="form-control" th:value="${pedido.urlProduto}" value="Url do produto"></div>
-
-            <div>Descricao</div>
-            <div>
-                <textarea  class="form-control" th:text="${pedido.descricao}">Descricao do pedido</textarea>
-            </div>
-
-            <div>
-                <img th:src="${pedido.urlImagem}" src=""/>
+                        <div>Descricao</div>
+                        <div>
+                            <textarea  class="form-control" th:text="${pedido.descricao}">Descricao do pedido</textarea>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-4">
+                        <div>
+                            <img class="img-thumbnail" th:src="${pedido.urlImagem}" src="" alt=""/>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
