--- a/mundi/src/main/resources/templates/home.html
+++ b/mundi/src/main/resources/templates/home.html
@@ -20,7 +20,7 @@
             </div>
             <a href="/pedido/formulario"> <button type="button" class="btn btn-secondary">Novo</button></a>
         </nav>
-        <div class="card" th:each="pedido : ${pedidos}">
+        <div class="card mb-3" th:each="pedido : ${pedidos}">
             <div class="card-header" th:text="${pedido.nomeProduto}">Nome do produto</div>
             <div class="card-body">
                 <div class="row">
