--- a/mundi/src/main/resources/templates/home.html
+++ b/mundi/src/main/resources/templates/home.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
 <html lang="br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <title>Home Page</title>
+<head th:replace="~{base :: head}">
+
 </head>
 <body>
+    <div th:replace="~{base :: logo}"></div>
     <div class="container">
-        <div class="jumbotron">
-            <h1 class="display-4">Meus Pedidos</h1>
-        </div>
+        <div th:replace="~{base :: jumbo('Meus Pedidos')}"></div>
         <nav class="navbar navbar-expand bg-light d-flex justify-content-between mb-3">
             <div class="navbar-nav">
                 <a class="nav-item nav-link active" href="">Todos</a>
