--- a/mundi/src/main/resources/templates/pedido/formulario.html
+++ b/mundi/src/main/resources/templates/pedido/formulario.html
@@ -1,49 +1,44 @@
 <!DOCTYPE html>
 <html lang="br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <title>Cadastro Pedido</title>
+<head th:replace="~{base :: head}">
 </head>
 <body>
- <div class="container">
-     <div class="jumbotron">
-         <h1 class="display-4">Novo Pedido</h1>
+    <div th:replace="~{base :: logo}"></div>
+     <div class="container">
+         <div th:replace="~{base :: jumbo('Novo Pedido')}"></div>
+         <div class="card" mb-3>
+             <form th:object="${pedidoDao}" class="card-body" action="/pedido/novo" method="post">
+                 <div class="form-group">
+                     <label for="nomeProduto">Produto</label>
+                         <input th:field="*{nomeProduto}" th:errorclass="is-invalid" class="form-control" name="nomeProduto" placeholder="Nome do produto"/>
+                     <small>Informe qual o nome do produto.</small>
+                     <div th:errors="*{nomeProduto}" class="invalid-feedback">
+                         Erros nome do produto
+                     </div>
+                 </div>
+                 <div class="form-group">
+                     <label for="urlProduto">Url</label>
+                     <input th:field="*{urlProduto}" th:errorclass="is-invalid" class="form-control" placeholder="Url do produto"/>
+                     <small>Procure um site aonde se encontra o procuto.</small>
+                     <div th:errors="*{urlProduto}" class="invalid-feedback">
+                         Erros nome da url do produto
+                     </div>
+                 </div>
+                 <div class="form-group">
+                     <label for="urlImagem">Imagem</label>
+                     <input th:field="*{urlImagem}" th:errorclass="is-invalid" class="form-control" placeholder="Url da imagem"/>
+                     <small>Copie e cole a url da imagem do produto e cole aqui.</small>
+                     <div th:errors="*{urlImagem}" class="invalid-feedback">
+                         Erros nome da url da imagem
+                     </div>
+                 </div>
+                 <div class="form-group mb-3">
+                     <label for="descricao">Descrição</label>
+                     <textarea th:field="*{descricao}" class="form-control"  placeholder="Adicione detalhes importantes para o comprador"></textarea>
+                 </div>
+                 <button class="btn btn-primary" type="submit">Cadastrar</button>
+             </form>
+         </div>
      </div>
-     <div class="card" mb-3>
-         <form th:object="${pedidoDao}" class="card-body" action="/pedido/novo" method="post">
-             <div class="form-group">
-                 <label for="nomeProduto">Produto</label>
-                     <input th:field="*{nomeProduto}" th:errorclass="is-invalid" class="form-control" name="nomeProduto" placeholder="Nome do produto"/>
-                 <small>Informe qual o nome do produto.</small>
-                 <div th:errors="*{nomeProduto}" class="invalid-feedback">
-                     Erros nome do produto
-                 </div>
-             </div>
-             <div class="form-group">
-                 <label for="urlProduto">Url</label>
-                 <input th:field="*{urlProduto}" th:errorclass="is-invalid" class="form-control" placeholder="Url do produto"/>
-                 <small>Procure um site aonde se encontra o procuto.</small>
-                 <div th:errors="*{urlProduto}" class="invalid-feedback">
-                     Erros nome da url do produto
-                 </div>
-             </div>
-             <div class="form-group">
-                 <label for="urlImagem">Imagem</label>
-                 <input th:field="*{urlImagem}" th:errorclass="is-invalid" class="form-control" placeholder="Url da imagem"/>
-                 <small>Copie e cole a url da imagem do produto e cole aqui.</small>
-                 <div th:errors="*{urlImagem}" class="invalid-feedback">
-                     Erros nome da url da imagem
-                 </div>
-             </div>
-             <div class="form-group mb-3">
-                 <label for="descricao">Descrição</label>
-                 <textarea th:field="*{descricao}" class="form-control"  placeholder="Adicione detalhes importantes para o comprador"></textarea>
-             </div>
-             <button class="btn btn-primary" type="submit">Cadastrar</button>
-         </form>
-     </div>
- </div>
 </body>
 </html>
