--- a/mundi/src/main/resources/templates/home.html
+++ b/mundi/src/main/resources/templates/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="br">
+<html lang="pt">
 <head th:replace="~{base :: head}">
 
 </head>
@@ -9,21 +9,25 @@
         <div th:replace="~{base :: jumbo('Meus Pedidos')}"></div>
         <nav class="navbar navbar-expand bg-light d-flex justify-content-between mb-3">
             <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="">Todos</a>
-                <a class="nav-item nav-link" href="">Aguardando</a>
-                <a class="nav-item nav-link" href="">Aprovado</a>
-                <a class="nav-item nav-link" href="">Entregue</a>
+                <a th:classappend="${status} == null ? 'active'" class="nav-item nav-link" href="/home">Todos</a>
+                <a th:classappend="${status} == 'aguardando' ? 'active'" class="nav-item nav-link" href="/home/aguardando">Aguardando</a>
+                <a th:classappend="${status} == 'aprovado' ? 'active'" class="nav-item nav-link" href="/home/aprovado">Aprovado</a>
+                <a th:classappend="${status} == 'entregue' ? 'active'" class="nav-item nav-link" href="/home/entregue">Entregue</a>
             </div>
             <a href="/pedido/formulario"> <button type="button" class="btn btn-secondary">Novo</button></a>
         </nav>
         <div class="card mb-3" th:each="pedido : ${pedidos}">
-            <div class="card-header" th:text="${pedido.nomeProduto}">Nome do produto</div>
+            <th:block th:switch="${pedido.statusPedido.name()}">
+                <div th:case="'AGUARDANDO'" class="card-header alert alert-warning" th:text="${pedido.nomeProduto}">Nome do produto</div>
+                <div th:case="'APROVADO'" class="card-header alert alert-success" th:text="${pedido.nomeProduto}">Nome do produto</div>
+                <div th:case="'ENTREGUE'" class="card-header alert alert-dark" th:text="${pedido.nomeProduto}">Nome do produto</div>
+            </th:block>
             <div class="card-body">
                 <div class="row">
                     <div class="col-12 col-sm-8 mb-3">
                         <div class="row">
-                            <div class="col-md-5">Valor: <span th:text="${pedido.valorProduto}">399,99</span></div>
-                            <div class="col-md-7">Data da entrega: <span th:text="${pedido.dataEntrega}">20/09/2020</span></div>
+                            <div class="col-md-5">Valor: <span th:if="${pedido.valorProduto} != null" th:text="'R$ '+${#numbers.formatDecimal(pedido.valorProduto,1,'POINT',2,'COMMA')}">399,99</span></div>
+                            <div class="col-md-7">Data da entrega: <span th:text="${#temporals.format(pedido.dataEntrega, 'dd/MM/yyyy')}">20/09/2020</span></div>
                         </div>
                         <div>Produto</div>
                         <div><input  class="form-control" th:value="${pedido.urlProduto}" value="Url do produto"></div>
