--- a/mundi/src/main/resources/templates/login.html
+++ b/mundi/src/main/resources/templates/login.html
@@ -17,7 +17,7 @@
                     <label for="password">Password</label>
                     <input class="form-control" type="password" name="password" placeholder="Password"/>
                 </div>
-                <button class="btn btn-info" type="submit">Cadastrar</button>
+                <button class="btn btn-info" type="submit">Log in</button>
             </form>
         </div>
     </div>
