--- a/mundi/src/main/resources/templates/base.html
+++ b/mundi/src/main/resources/templates/base.html
@@ -18,7 +18,11 @@
 
 <div th:fragment="logo" class="logo-container mb-3 p-3 d-flex justify-content-between">
     <span class="logo">Mundi</span>
-    <span class="mt-3">Logout</span>
+    <span class="mt-3">
+        <a class="text-light" sec:authorize="!isAuthenticated()" href="/login">Login</a>
+        <a onclick="document.querySelector('#cabecalho-logout').submit()" class="text-light" sec:authorize="isAuthenticated()" href="#">Logout</a>
+        <form id="cabecalho-logout" th:action="@{/logout}" method="post"></form>
+    </span>
 </div>
 
 <div th:fragment="jumbo(valor)" class="jumbotron">
